csv入力処理の追加

--- a/cos-mos.vcxproj
+++ b/cos-mos.vcxproj
@@ -146,6 +146,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="code\system\csv_file.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="code\system\csv_file.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
