--- a/cos-mos.vcxproj.filters
+++ b/cos-mos.vcxproj.filters
@@ -395,5 +395,8 @@
     <ClInclude Include="code\Project\Object\Block\block.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
+    <ClInclude Include="code\Project\Character\player.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
