--- a/cos-mos.vcxproj
+++ b/cos-mos.vcxproj
@@ -159,6 +159,7 @@
     <ClCompile Include="code\Project\Mode\mode.cpp" />
     <ClCompile Include="code\Project\Mode\mode_game.cpp" />
     <ClCompile Include="code\Project\Object\Block\block.cpp" />
+    <ClCompile Include="code\Project\Object\Gimmick\trampoline.cpp" />
     <ClCompile Include="code\Project\precompile.cpp" />
     <ClCompile Include="code\Project\System\csv_file.cpp" />
     <ClCompile Include="code\_RNLib\game-mode.cpp" />
@@ -223,6 +224,7 @@
     <ClInclude Include="code\Project\Mode\mode.h" />
     <ClInclude Include="code\Project\Mode\mode_game.h" />
     <ClInclude Include="code\Project\Object\Block\block.h" />
+    <ClInclude Include="code\Project\Object\Gimmick\trampoline.h" />
     <ClInclude Include="code\Project\precompile.h" />
     <ClInclude Include="code\Project\System\csv_file.h" />
     <ClInclude Include="code\_RNLib\game-mode.h" />
