--- a/cos-mos.vcxproj
+++ b/cos-mos.vcxproj
@@ -160,7 +160,7 @@
     <ClCompile Include="code\Project\Mode\mode_game.cpp" />
     <ClCompile Include="code\Project\Object\Block\block-manager.cpp" />
     <ClCompile Include="code\Project\Object\Block\block.cpp" />
-    <ClCompile Include="code\Project\Object\Gimmick\meteo.cpp" />
+    <ClCompile Include="code\Project\Object\Gimmick\meteor.cpp" />
     <ClCompile Include="code\Project\Object\Gimmick\trampoline.cpp" />
     <ClCompile Include="code\Project\precompile.cpp" />
     <ClCompile Include="code\Project\System\csv_file.cpp" />
@@ -227,7 +227,7 @@
     <ClInclude Include="code\Project\Mode\mode_game.h" />
     <ClInclude Include="code\Project\Object\Block\block-manager.h" />
     <ClInclude Include="code\Project\Object\Block\block.h" />
-    <ClInclude Include="code\Project\Object\Gimmick\meteo.h" />
+    <ClInclude Include="code\Project\Object\Gimmick\meteor.h" />
     <ClInclude Include="code\Project\Object\Gimmick\trampoline.h" />
     <ClInclude Include="code\Project\precompile.h" />
     <ClInclude Include="code\Project\System\csv_file.h" />
