--- a/cos-mos.vcxproj.filters
+++ b/cos-mos.vcxproj.filters
@@ -204,7 +204,7 @@
     <ClCompile Include="code\Project\precompile.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="code\Project\Object\Gimmick\meteo.cpp">
+    <ClCompile Include="code\Project\Object\Gimmick\meteor.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
   </ItemGroup>
@@ -407,7 +407,7 @@
     <ClInclude Include="code\Project\precompile.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="code\Project\Object\Gimmick\meteo.h">
+    <ClInclude Include="code\Project\Object\Gimmick\meteor.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
