状況確認用

--- a/cos-mos.vcxproj
+++ b/cos-mos.vcxproj
@@ -160,6 +160,7 @@
     <ClCompile Include="code\Project\Mode\mode_game.cpp" />
     <ClCompile Include="code\Project\Object\Block\block-manager.cpp" />
     <ClCompile Include="code\Project\Object\Block\block.cpp" />
+    <ClCompile Include="code\Project\Object\Block\move-block.cpp" />
     <ClCompile Include="code\Project\Object\Gimmick\meteor.cpp" />
     <ClCompile Include="code\Project\Object\Gimmick\trampoline.cpp" />
     <ClCompile Include="code\Project\precompile.cpp" />
@@ -227,6 +228,7 @@
     <ClInclude Include="code\Project\Mode\mode_game.h" />
     <ClInclude Include="code\Project\Object\Block\block-manager.h" />
     <ClInclude Include="code\Project\Object\Block\block.h" />
+    <ClInclude Include="code\Project\Object\Block\move-block.h" />
     <ClInclude Include="code\Project\Object\Gimmick\meteor.h" />
     <ClInclude Include="code\Project\Object\Gimmick\trampoline.h" />
     <ClInclude Include="code\Project\precompile.h" />
