--- a/cos-mos.vcxproj.filters
+++ b/cos-mos.vcxproj.filters
@@ -414,4 +414,69 @@
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <None Include=".gitattributes" />
+    <None Include=".gitignore" />
+    <None Include="cos-mos.VC.db" />
+    <None Include="mqo\1P.mqo" />
+    <None Include="mqo\2P.mqo" />
+    <None Include="mqo\Block.mqo" />
+    <None Include="mqo\Lift.mqo" />
+    <None Include="mqo\Meteorite.mqo" />
+    <None Include="mqo\Spike Half.mqo" />
+    <None Include="mqo\Spike.mqo" />
+    <None Include="mqo\Spring Floor.mqo" />
+    <None Include="Debug\cos-mos.exe" />
+    <None Include="Debug\cos-mos.ilk" />
+    <None Include="Debug\cos-mos.pdb" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="data\TEXTURE\Object\block.png">
+      <Filter>リソース ファイル</Filter>
+    </Image>
+    <Image Include="data\TEXTURE\meteo000.png">
+      <Filter>リソース ファイル</Filter>
+    </Image>
+    <Image Include="data\TEXTURE\pillar000.jpg">
+      <Filter>リソース ファイル</Filter>
+    </Image>
+  </ItemGroup>
+  <ItemGroup>
+    <Object Include="Debug\block.obj" />
+    <Object Include="Debug\camera.obj" />
+    <Object Include="Debug\camera_control.obj" />
+    <Object Include="Debug\collision3D.obj" />
+    <Object Include="Debug\color.obj" />
+    <Object Include="Debug\csv_file.obj" />
+    <Object Include="Debug\data.obj" />
+    <Object Include="Debug\doll3D.obj" />
+    <Object Include="Debug\draw-info.obj" />
+    <Object Include="Debug\draw-manager.obj" />
+    <Object Include="Debug\draw-state.obj" />
+    <Object Include="Debug\easing.obj" />
+    <Object Include="Debug\eff3D-cylinder.obj" />
+    <Object Include="Debug\eff3D-fragment.obj" />
+    <Object Include="Debug\eff3D-polygon.obj" />
+    <Object Include="Debug\effect3D.obj" />
+    <Object Include="Debug\effect3D_manager.obj" />
+    <Object Include="Debug\file.obj" />
+    <Object Include="Debug\fog.obj" />
+    <Object Include="Debug\game-mode.obj" />
+    <Object Include="Debug\geometry.obj" />
+    <Object Include="Debug\human-base3D.obj" />
+    <Object Include="Debug\imgui.obj" />
+    <Object Include="Debug\imgui_crt-wgt.obj" />
+    <Object Include="Debug\imgui_demo.obj" />
+    <Object Include="Debug\imgui_impl_dx9.obj" />
+    <Object Include="Debug\imgui_impl_win32.obj" />
+    <Object Include="Debug\imgui_draw.obj" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="Debug\cos-mos.log" />
+    <Text Include="data\_RNData\AmbientLight.txt" />
+    <Text Include="data\_RNData\Effect3DList.txt" />
+    <Text Include="data\_RNData\FontList.txt" />
+    <Text Include="data\_RNData\SoundList.txt" />
+    <Text Include="data\_RNData\VisualSetting.txt" />
+  </ItemGroup>
 </Project>
