パーツの色変更

--- a/cos-mos.vcxproj
+++ b/cos-mos.vcxproj
@@ -159,6 +159,7 @@
     <ClCompile Include="code\Project\manager.cpp" />
     <ClCompile Include="code\Project\Mode\mode.cpp" />
     <ClCompile Include="code\Project\Mode\mode_game.cpp" />
+    <ClCompile Include="code\Project\Object\Item\Parts.cpp" />
     <ClCompile Include="code\Project\Object\stage-object-manager.cpp" />
     <ClCompile Include="code\Project\Object\Block\block.cpp" />
     <ClCompile Include="code\Project\Object\Block\move-block.cpp" />
@@ -227,6 +228,7 @@
     <ClInclude Include="code\Project\manager.h" />
     <ClInclude Include="code\Project\Mode\mode.h" />
     <ClInclude Include="code\Project\Mode\mode_game.h" />
+    <ClInclude Include="code\Project\Object\Item\Parts.h" />
     <ClInclude Include="code\Project\Object\stage-object-manager.h" />
     <ClInclude Include="code\Project\Object\Block\block.h" />
     <ClInclude Include="code\Project\Object\Block\move-block.h" />
