惑星の追加

--- a/cos-mos.vcxproj.filters
+++ b/cos-mos.vcxproj.filters
@@ -249,6 +249,9 @@
     <ClCompile Include="code\Project\Object\Gimmick\Spike.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="code\Project\Object\BackGround\Planet.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="code\_RNLib\_Basis\3D\Body\collision3D.h">
@@ -458,7 +461,7 @@
     <ClInclude Include="code\Project\Object\Item\Parts.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="code\Project\Object\Gimmick\Spike.h">
+    <ClInclude Include="code\Project\Object\BackGround\Planet.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
@@ -480,8 +483,8 @@
     <None Include="Debug\meteor.obj.enc" />
     <None Include="Debug\vc140.idb" />
     <None Include="Debug\vc140.pdb" />
-    <None Include="data\GAMEDATA\STAGE\STAGE_EDITOR.xlsx" />
     <None Include="data\GAMEDATA\STAGE\csv\STAGE00.csv" />
+    <None Include="data\GAMEDATA\STAGE\STAGE_EDITOR.xlsx" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="data\TEXTURE\Object\block.png">
