--- a/cos-mos.vcxproj
+++ b/cos-mos.vcxproj
@@ -159,6 +159,7 @@
     <ClCompile Include="code\Project\manager.cpp" />
     <ClCompile Include="code\Project\Mode\mode.cpp" />
     <ClCompile Include="code\Project\Mode\mode_game.cpp" />
+    <ClCompile Include="code\Project\Object\BackGround\Planet.cpp" />
     <ClCompile Include="code\Project\Object\Item\Parts.cpp" />
     <ClCompile Include="code\Project\Object\Gimmick\Spike.cpp" />
     <ClCompile Include="code\Project\Object\stage-object-manager.cpp" />
@@ -229,6 +230,7 @@
     <ClInclude Include="code\Project\manager.h" />
     <ClInclude Include="code\Project\Mode\mode.h" />
     <ClInclude Include="code\Project\Mode\mode_game.h" />
+    <ClInclude Include="code\Project\Object\BackGround\Planet.h" />
     <ClInclude Include="code\Project\Object\Item\Parts.h" />
     <ClInclude Include="code\Project\Object\stage-object-manager.h" />
     <ClInclude Include="code\Project\Object\Block\block.h" />
