--- a/cos-mos.vcxproj
+++ b/cos-mos.vcxproj
@@ -160,6 +160,7 @@
     <ClCompile Include="code\Project\Mode\mode.cpp" />
     <ClCompile Include="code\Project\Mode\mode_game.cpp" />
     <ClCompile Include="code\Project\Object\BackGround\Planet.cpp" />
+    <ClCompile Include="code\Project\Object\Gimmick\rocket.cpp" />
     <ClCompile Include="code\Project\Object\Item\Parts.cpp" />
     <ClCompile Include="code\Project\Object\Gimmick\Spike.cpp" />
     <ClCompile Include="code\Project\Object\stage-object-manager.cpp" />
@@ -231,6 +232,8 @@
     <ClInclude Include="code\Project\Mode\mode.h" />
     <ClInclude Include="code\Project\Mode\mode_game.h" />
     <ClInclude Include="code\Project\Object\BackGround\Planet.h" />
+    <ClInclude Include="code\Project\Object\Gimmick\rocket.h" />
+    <ClInclude Include="code\Project\Object\Gimmick\Spike.h" />
     <ClInclude Include="code\Project\Object\Item\Parts.h" />
     <ClInclude Include="code\Project\Object\stage-object-manager.h" />
     <ClInclude Include="code\Project\Object\Block\block.h" />
