タイトル・リザルト処理の追加 仮の画面推移の実装

--- a/cos-mos.vcxproj
+++ b/cos-mos.vcxproj
@@ -159,6 +159,8 @@
     <ClCompile Include="code\Project\manager.cpp" />
     <ClCompile Include="code\Project\Mode\mode.cpp" />
     <ClCompile Include="code\Project\Mode\mode_game.cpp" />
+    <ClCompile Include="code\Project\Mode\mode_result.cpp" />
+    <ClCompile Include="code\Project\Mode\mode_title.cpp" />
     <ClCompile Include="code\Project\Object\BackGround\Planet.cpp" />
     <ClCompile Include="code\Project\Object\Gimmick\rocket.cpp" />
     <ClCompile Include="code\Project\Object\Item\Parts.cpp" />
@@ -231,6 +233,8 @@
     <ClInclude Include="code\Project\manager.h" />
     <ClInclude Include="code\Project\Mode\mode.h" />
     <ClInclude Include="code\Project\Mode\mode_game.h" />
+    <ClInclude Include="code\Project\Mode\mode_result.h" />
+    <ClInclude Include="code\Project\Mode\mode_title.h" />
     <ClInclude Include="code\Project\Object\BackGround\Planet.h" />
     <ClInclude Include="code\Project\Object\Gimmick\rocket.h" />
     <ClInclude Include="code\Project\Object\Gimmick\Spike.h" />
