--- a/cos-mos.vcxproj
+++ b/cos-mos.vcxproj
@@ -159,6 +159,7 @@
     <ClCompile Include="code\Project\manager.cpp" />
     <ClCompile Include="code\Project\Mode\mode.cpp" />
     <ClCompile Include="code\Project\Mode\mode_game.cpp" />
+    <ClCompile Include="code\Project\Mode\mode_logo.cpp" />
     <ClCompile Include="code\Project\Mode\mode_result.cpp" />
     <ClCompile Include="code\Project\Mode\mode_title.cpp" />
     <ClCompile Include="code\Project\Object\BackGround\Planet.cpp" />
@@ -234,6 +235,7 @@
     <ClInclude Include="code\Project\manager.h" />
     <ClInclude Include="code\Project\Mode\mode.h" />
     <ClInclude Include="code\Project\Mode\mode_game.h" />
+    <ClInclude Include="code\Project\Mode\mode_logo.h" />
     <ClInclude Include="code\Project\Mode\mode_result.h" />
     <ClInclude Include="code\Project\Mode\mode_title.h" />
     <ClInclude Include="code\Project\Object\BackGround\Planet.h" />
