--- a/cos-mos.vcxproj.filters
+++ b/cos-mos.vcxproj.filters
@@ -276,7 +276,7 @@
     <ClCompile Include="code\Project\System\words\object\font-object.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="code\Project\System\words\text.cpp">
+    <ClCompile Include="code\Project\System\words\font-text.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
   </ItemGroup>
@@ -521,7 +521,7 @@
     <ClInclude Include="code\Project\System\words\object\font-object.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="code\Project\System\words\text.h">
+    <ClInclude Include="code\Project\System\words\font-text.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
