--- a/cos-mos.vcxproj
+++ b/cos-mos.vcxproj
@@ -163,6 +163,7 @@
     <ClCompile Include="code\Project\Mode\mode_result.cpp" />
     <ClCompile Include="code\Project\Mode\mode_title.cpp" />
     <ClCompile Include="code\Project\Object\BackGround\Planet.cpp" />
+    <ClCompile Include="code\Project\Object\BackGround\Star.cpp" />
     <ClCompile Include="code\Project\Object\Block\fill-block.cpp" />
     <ClCompile Include="code\Project\Object\Gimmick\rocket.cpp" />
     <ClCompile Include="code\Project\Object\Item\Parts.cpp" />
@@ -239,6 +240,7 @@
     <ClInclude Include="code\Project\Mode\mode_result.h" />
     <ClInclude Include="code\Project\Mode\mode_title.h" />
     <ClInclude Include="code\Project\Object\BackGround\Planet.h" />
+    <ClInclude Include="code\Project\Object\BackGround\Star.h" />
     <ClInclude Include="code\Project\Object\Block\fill-block.h" />
     <ClInclude Include="code\Project\Object\Gimmick\rocket.h" />
     <ClInclude Include="code\Project\Object\Gimmick\Spike.h" />
