--- a/cos-mos.vcxproj.filters
+++ b/cos-mos.vcxproj.filters
@@ -288,6 +288,9 @@
     <ClCompile Include="code\Project\Object\BackGround\ShiningWave.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="code\Project\Object\Gimmick\RoadTripLaser.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="code\_RNLib\_Basis\3D\Body\collision3D.h">
@@ -540,6 +543,9 @@
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
     <ClInclude Include="code\Project\Object\BackGround\Shiningwave.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="code\Project\Object\Gimmick\RoadTripLaser.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
