描画処理修正

--- a/cos-mos.vcxproj
+++ b/cos-mos.vcxproj
@@ -186,8 +186,6 @@
     <ClCompile Include="code\_RNLib\_Basis\3D\Body\human-base3D.cpp" />
     <ClCompile Include="code\_RNLib\_Basis\3D\Body\motion3D.cpp" />
     <ClCompile Include="code\_RNLib\_Basis\3D\Body\setup3D.cpp" />
-    <ClCompile Include="code\_RNLib\_Basis\3D\Camera\camera.cpp" />
-    <ClCompile Include="code\_RNLib\_Basis\3D\Camera\camera_control.cpp" />
     <ClCompile Include="code\_RNLib\_Basis\3D\Draw\line3D.cpp" />
     <ClCompile Include="code\_RNLib\_Basis\3D\Effect\eff3D-cylinder.cpp" />
     <ClCompile Include="code\_RNLib\_Basis\3D\Effect\eff3D-fragment.cpp" />
@@ -201,15 +199,18 @@
     <ClCompile Include="code\_RNLib\_Basis\Calculation\geometry.cpp" />
     <ClCompile Include="code\_RNLib\_Basis\Calculation\matrix.cpp" />
     <ClCompile Include="code\_RNLib\_Basis\Calculation\number.cpp" />
+    <ClCompile Include="code\_RNLib\_Basis\Draw\camera.cpp" />
+    <ClCompile Include="code\_RNLib\_Basis\Draw\camera_control.cpp" />
     <ClCompile Include="code\_RNLib\_Basis\Draw\draw-info.cpp" />
     <ClCompile Include="code\_RNLib\_Basis\Draw\draw-manager.cpp" />
     <ClCompile Include="code\_RNLib\_Basis\Draw\draw-state.cpp" />
-    <ClCompile Include="code\_RNLib\_Basis\Draw\model.cpp" />
-    <ClCompile Include="code\_RNLib\_Basis\Draw\polygon2D.cpp" />
-    <ClCompile Include="code\_RNLib\_Basis\Draw\polygon3D.cpp" />
+    <ClCompile Include="code\_RNLib\_Basis\Draw\light3D.cpp" />
+    <ClCompile Include="code\_RNLib\_Basis\Draw\PutObject\model.cpp" />
+    <ClCompile Include="code\_RNLib\_Basis\Draw\PutObject\polygon2D.cpp" />
+    <ClCompile Include="code\_RNLib\_Basis\Draw\PutObject\polygon3D.cpp" />
+    <ClCompile Include="code\_RNLib\_Basis\Draw\PutObject\text2D.cpp" />
+    <ClCompile Include="code\_RNLib\_Basis\Draw\PutObject\text3D.cpp" />
     <ClCompile Include="code\_RNLib\_Basis\Draw\text.cpp" />
-    <ClCompile Include="code\_RNLib\_Basis\Draw\text2D.cpp" />
-    <ClCompile Include="code\_RNLib\_Basis\Draw\text3D.cpp" />
     <ClCompile Include="code\_RNLib\_Basis\Mechanical\object-manager.cpp" />
     <ClCompile Include="code\_RNLib\_Basis\Mechanical\object.cpp" />
     <ClCompile Include="code\_RNLib\_Basis\Mechanical\regist.cpp" />
@@ -282,12 +283,19 @@
     <ClInclude Include="code\_RNLib\_Basis\Calculation\geometry.h" />
     <ClInclude Include="code\_RNLib\_Basis\Calculation\matrix.h" />
     <ClInclude Include="code\_RNLib\_Basis\Calculation\number.h" />
+    <ClInclude Include="code\_RNLib\_Basis\Draw\camera.h" />
     <ClInclude Include="code\_RNLib\_Basis\Draw\draw-info.h" />
     <ClInclude Include="code\_RNLib\_Basis\Draw\draw-manager.h" />
     <ClInclude Include="code\_RNLib\_Basis\Draw\draw-state.h" />
+    <ClInclude Include="code\_RNLib\_Basis\Draw\light3D.h" />
     <ClInclude Include="code\_RNLib\_Basis\Draw\model.h" />
     <ClInclude Include="code\_RNLib\_Basis\Draw\polygon2D.h" />
     <ClInclude Include="code\_RNLib\_Basis\Draw\polygon3D.h" />
+    <ClInclude Include="code\_RNLib\_Basis\Draw\PutObject\model.h" />
+    <ClInclude Include="code\_RNLib\_Basis\Draw\PutObject\polygon2D.h" />
+    <ClInclude Include="code\_RNLib\_Basis\Draw\PutObject\polygon3D.h" />
+    <ClInclude Include="code\_RNLib\_Basis\Draw\PutObject\text2D.h" />
+    <ClInclude Include="code\_RNLib\_Basis\Draw\PutObject\text3D.h" />
     <ClInclude Include="code\_RNLib\_Basis\Draw\text.h" />
     <ClInclude Include="code\_RNLib\_Basis\Draw\text2D.h" />
     <ClInclude Include="code\_RNLib\_Basis\Draw\text3D.h" />
